fix(bug): corrects tooltip's width on hover. Tracks: https://github.com/openshiftio/openshift.io/issues/3091

--- a/src/app/launcher/create-app/release-strategy-createapp-step/release-strategy-createapp-step.component.less
+++ b/src/app/launcher/create-app/release-strategy-createapp-step/release-strategy-createapp-step.component.less
@@ -21,6 +21,10 @@
       &.with-tag {
         padding-bottom: 20px;
         position: relative;
+
+        .popover {
+          min-width: 250px;
+        }
       }
 
     }
